welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:9: error: not found: value get
    if(get(X)==abscisseFinale){
       ^ZigZag:9: error: not found: value X
    if(get(X)==abscisseFinale){
           ^